--- a/trunk/ui/mainwindow.ui
+++ b/trunk/ui/mainwindow.ui
@@ -14,8 +14,8 @@
    <string>Smolt</string>
   </property>
   <property name="windowIcon">
-   <iconset>
-    <normaloff>../icons/smolt.png</normaloff>../icons/smolt.png</iconset>
+   <iconset resource="../icons/data.qrc">
+    <normaloff>:/data/smolt.png</normaloff>:/data/smolt.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_2">
@@ -132,6 +132,8 @@
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="../icons/data.qrc"/>
+ </resources>
  <connections/>
 </ui>
