--- a/ui/privacyDialog.ui
+++ b/ui/privacyDialog.ui
@@ -14,8 +14,8 @@
    <string>Privacy Policy</string>
   </property>
   <property name="windowIcon">
-   <iconset>
-    <normaloff>../icons/smolt.png</normaloff>../icons/smolt.png</iconset>
+   <iconset resource="../icons/data.qrc">
+    <normaloff>:/data/smolt.png</normaloff>:/data/smolt.png</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -59,6 +59,8 @@ p, li { white-space: pre-wrap; }
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../icons/data.qrc"/>
+ </resources>
  <connections/>
 </ui>
