--- a/trunk/ui/infoDialog.ui
+++ b/trunk/ui/infoDialog.ui
@@ -76,6 +76,9 @@
            <property name="text">
             <string/>
            </property>
+           <property name="openExternalLinks">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
         </layout>
@@ -101,7 +104,7 @@
             <string/>
            </property>
            <property name="textInteractionFlags">
-            <set>Qt::TextBrowserInteraction</set>
+            <set>Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
            </property>
           </widget>
          </item>
